--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Search</title>
     <style>
+      @import url(https://fonts.googleapis.com/css?family=Jetbrains+mono:300,400,500,600,700,800,900&display=swap);
       * {
         transition: 0.3s;
       }
