--- a/index.html
+++ b/index.html
@@ -75,7 +75,7 @@
         " / " +
         time.getDate().toString().padStart(2, "0") +
         "-" +
-        time.getMonth().toString().padStart(2, "0") +
+        (time.getMonth() + 1).toString().padStart(2, "0") +
         "-" +
         time.getFullYear();
       lightning2.innerHTML = "? " + timeShown;
