added blackout background

--- a/index.html
+++ b/index.html
@@ -14,7 +14,8 @@
       html,
       body,
       .viewport {
-        background-color: #000814;
+        background-color: #000000;
+        /*background-color: #000814;*/
       }
 
       input {
